<resources>
    // Application-level
    <string name="app_name">Gym Log</string>
    <string name="action_settings">Settings</string>

    // ChooseWorkoutActivity
    <string name="activity_name_choose">Choose workout</string>
    <string name="horizontal_scroll_1_name">Favorites</string>
    <string name="horizontal_scroll_2_name">Recent</string>
    <string name="button_all_workouts_name">All workouts (not implemented)</string>

    // EditWorkoutActivity
    <string name="activity_name_edit">Edit/confirm workout</string>
    <string name="wtype_confirmation_text">Workout type</string>
    <string name="weight_confirmation_text">Weight</string>
    <string name="reps_confirmation_text">Reps</string>

    // WeightActivity
    <string name="activity_name_weight">Weight (not implemented></string>

    // HistoryActivity
    <string name="activity_name_history">History (not implemented)</string>

    // StatisticsActivity
    <string name="activity_name_stats">Statistics (not implemented)</string>
</resources>
