<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:text="@string/horizontal_scroll_1_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollViewFavorites"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_card_height"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:layout_marginRight="@dimen/default_horizontal_margin"
        android:fillViewport="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFavorites">

        <LinearLayout
            android:id="@+id/favorites_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textViewRecents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:text="@string/horizontal_scroll_2_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewFavorites" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollViewRecent"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_card_height"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:layout_marginRight="@dimen/default_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecents">

        <LinearLayout
            android:id="@+id/recents_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/button_all_workouts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:layout_marginRight="@dimen/default_horizontal_margin"
        android:text="@string/button_all_workouts_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewRecent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>